--- a/package.json
+++ b/package.json
@@ -2,20 +2,67 @@
   "name": "netscanner-ui",
   "version": "0.1.0",
   "description": "UI for alternative frontend for Metasploit PRO",
-  "main": "index.js",
-  "scripts": {
-    "test": "node node_modules/argg tests/*.js",
-    "cover": "istanbul cover --dir reports/coverage node_modules/argg tests/*.js",
-    "plato": "plato -d reports/plato index.js"
-  },
   "author": "Maxim Zhukov <crmaxx@gmail.com>",
   "license": "MIT",
+  "homepage": "https://github.com/crmaxx/netscanner-ui",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack-dev-server --inline --no-info --content-base src",
+    "deploy": "surge -p public -d netscanner-ui.surge.sh",
+    "lint": "eslint src"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/crmaxx/netscanner-ui.git"
+  },
+  "engines": {
+    "node": "0.12.x"
+  },
+  "private": true,
   "dependencies": {
+    "autoprefixer-core": "^5.2.1",
+    "autoprefixer-loader": "^2.0.0",
     "babel": "^5.8.20",
     "babel-core": "^5.8.20",
     "babel-loader": "^5.3.2",
+    "css-loader": "^0.15.6",
+    "css-mqpacker": "^3.1.0",
+    "csswring": "^3.0.5",
+    "expose-loader": "^0.7.0",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
+    "fluxible": "^0.5.1",
+    "fluxible-addons-react": "^0.1.6",
+    "fluxible-plugin-fetchr": "^0.3.4",
+    "fluxible-router": "^0.2.1",
+    "html-webpack-plugin": "^1.6.0",
+    "immutable": "^3.7.4",
+    "lodash": "^3.10.0",
+    "material-ui": "^0.10.2",
+    "node-libs-browser": "^0.5.2",
+    "node-sass": "^3.2.0",
+    "postcss-custom-properties": "^4.2.0",
+    "postcss-import": "^6.2.0",
+    "postcss-loader": "^0.5.1",
+    "postcss-merge-rules": "^1.3.1",
+    "postcss-nested": "^0.3.2",
     "react": "^0.13.3",
+    "react-tap-event-plugin": "^0.1.7",
+    "rimraf": "^2.4.2",
+    "sass-loader": "^1.0.3",
+    "strip-loader": "^0.1.0",
+    "style-loader": "^0.12.3",
     "superagent": "^1.2.0",
+    "url-loader": "^0.5.6",
     "webpack": "^1.10.5"
+  },
+  "devDependencies": {
+    "babel-eslint": "^4.0.5",
+    "eslint": "^1.0.0",
+    "eslint-plugin-react": "^3.1.0",
+    "react-hot-loader": "^1.2.8",
+    "surge": "^0.14.3",
+    "webpack-dev-server": "^1.10.1"
   }
 }
