--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server --inline --no-info --content-base src",
+    "start": "webpack-dev-server --inline --no-info",
     "deploy": "surge -p public -d netscanner-ui.surge.sh",
     "lint": "eslint src"
   },
@@ -48,6 +48,7 @@
     "postcss-merge-rules": "^1.3.1",
     "postcss-nested": "^0.3.2",
     "react": "^0.13.3",
+    "react-router": "^0.13.3",
     "react-tap-event-plugin": "^0.1.7",
     "rimraf": "^2.4.2",
     "sass-loader": "^1.0.3",
