--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,18 @@
 {
-  "parser": "babel-eslint",
-  "rules": {
-    "no-unused-expressions": 1,
-    "no-unused-vars": 1,
-    "strict": 0,
-    "new-cap": 0,
-    "camelcase": 0,
-    "react/jsx-uses-react": 1
-  },
-
-  "ecmaFeatures": {
-    "jsx": true
-  },
-
+  "extends": "eslint-config-airbnb",
   "env": {
     "browser": true,
-    "node": true,
-    "es6": true
+    "mocha": true,
+    "node": true
   },
-
   "globals": {
-    "BROWSER": true
+    "__DEV__": true
   },
-
-  "plugins": ["react"]
-
+  "rules": {
+    "no-console": 0,
+    "no-else-return": 0
+  },
+  "plugins": [
+    "react"
+  ]
 }
