--- a/package.json
+++ b/package.json
@@ -21,25 +21,35 @@
   },
   "private": true,
   "dependencies": {
+    "immutable": "^3.7.4",
+    "lodash": "^3.10.0",
+    "material-ui": "^0.10.4",
+    "react": "^0.13.3",
+    "react-redux": "^0.9.0",
+    "react-router": "^1.0.0-beta3",
+    "react-tap-event-plugin": "^0.1.7",
+    "redux": "^1.0.0-rc",
+    "redux-logger": "0.0.1",
+    "redux-thunk": "^0.1.0",
+    "superagent": "^1.2.0"
+  },
+  "devDependencies": {
     "autoprefixer-core": "^5.2.1",
     "autoprefixer-loader": "^2.0.0",
-    "babel": "^5.8.20",
-    "babel-core": "^5.8.20",
+    "babel": "^5.8.21",
+    "babel-core": "^5.8.22",
+    "babel-eslint": "^4.0.5",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.15.6",
     "css-mqpacker": "^3.1.0",
     "csswring": "^3.0.5",
+    "eslint": "^1.1.0",
+    "eslint-config-airbnb": "0.0.7",
+    "eslint-plugin-react": "^3.2.1",
     "expose-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
-    "fluxible": "^0.5.1",
-    "fluxible-addons-react": "^0.1.6",
-    "fluxible-plugin-fetchr": "^0.3.4",
-    "fluxible-router": "^0.2.1",
     "html-webpack-plugin": "^1.6.0",
-    "immutable": "^3.7.4",
-    "lodash": "^3.10.0",
-    "material-ui": "^0.10.2",
     "node-libs-browser": "^0.5.2",
     "node-sass": "^3.2.0",
     "postcss-custom-properties": "^4.2.0",
@@ -47,23 +57,14 @@
     "postcss-loader": "^0.5.1",
     "postcss-merge-rules": "^1.3.1",
     "postcss-nested": "^0.3.2",
-    "react": "^0.13.3",
-    "react-router": "^0.13.3",
-    "react-tap-event-plugin": "^0.1.7",
+    "react-hot-loader": "^1.2.8",
     "rimraf": "^2.4.2",
     "sass-loader": "^1.0.3",
     "strip-loader": "^0.1.0",
     "style-loader": "^0.12.3",
-    "superagent": "^1.2.0",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.10.5"
-  },
-  "devDependencies": {
-    "babel-eslint": "^4.0.5",
-    "eslint": "^1.0.0",
-    "eslint-plugin-react": "^3.1.0",
-    "react-hot-loader": "^1.2.8",
     "surge": "^0.14.3",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.10.5",
     "webpack-dev-server": "^1.10.1"
   }
 }
